css/style.css
/* Import fonts */
@import url('https://fonts.googleapis.com/css2?family=Pinyon+Script&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Zen+Tokyo+Zoo&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');

html{
    /* background-image: url("../img/rain.gif"), linear-gradient(to right, rgb(7, 55, 127) , rgb(117, 118, 134)); */
    background-image: linear-gradient(to right, rgb(4, 39, 92) , rgb(93, 94, 107));
    background-size: cover;
    display: flex;
    justify-content: center;
}

body.noScroll{
    position: fixed;
}

h1, .soundMasterContainer, .soundContainer{
    display: flex;
    justify-self: center;
    justify-content: center;
}

.headerSmall{
    color: white;
    font-size: 22px;
    margin-bottom: -50px;
    margin-right: 350px;
    font-family: "Pinyon Script", cursive;
    font-weight: 400;
    font-style: normal;
}
.headerLarge{
    color: rgb(231, 153, 9);
    font-family: "Zen Tokyo Zoo", system-ui;
    font-weight: 400;
    font-style: normal;
    font-size: 60px;
    margin-bottom: 10px;
}

img{
    width: 80px;
    height: auto;
}

.volumeSlider{
    margin: 15px;
    width: 200px;
}

p{
    font-family: "Roboto", sans-serif;
    font-weight: 500;
    font-style: normal;
    margin-top: -10px;
}

.soundMasterContainer{
    width: 1200px;
    border: solid;
    border-color: rgb(246, 240, 240, 0.75);
    border-radius: 75px;
    align-items: center;
    flex-wrap: wrap;
    justify-content: space-around;
    background-color: rgb(0, 0, 0, 0.5);
    margin-bottom: 100px;
}

.soundContainer{
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
    width: 250px;
    height: 171.6px;
    padding: 15px;
    margin: 20px;
    border-color: rgb(246, 240, 240, 0.75);
    border-radius: 20px;
    color: white;
    background-color: rgba(30, 79, 164, 0.5);
    border-style: solid;
}

.vgmBtnContainer{
    margin-top: -5px;
    display: flex;
    justify-content: space-between;
    width: 250px;
}

.prevBtn, .nextBtn{
    width: 22px;
    height: auto;
}
.prevBtn{
    rotate: 180deg;
}

.songNameContainer{
    display: flex;
    justify-content: center;
    border-radius: 20px;
    background-color: black;
    width: 200px;
    height: auto;
    position: relative;
    overflow: hidden;
}


.songNameWrapper {
    white-space: nowrap;
    animation: scrollLeft linear infinite; /* Animation for scrolling */
}

.songName {
    display: inline;
    padding-left: 100%; /* Make text start off-screen */
    color: aqua;
}

/* Keyframes for scrollLeft effect */
@keyframes scrollLeft {
    0% {
        transform: translateX(0%); /* Text starts off-screen */
    }
    100% {
        transform: translateX(-211%); /* Text moves all the way to the left completely out of view */
    }
}

#overlay {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: black;
    z-index: 9999;
    display: none;
  }

  #overlay.visible {
    display: block;
  }


.darkModeBtn {
    position: relative;
    z-index: 10000;
    cursor: pointer;
    width: 50px;
    height: auto;
    display: flex;
    justify-self: end;
    margin-top: 10px;
    margin-bottom: -50px;
    margin-left: 150px;
    margin-right: -120px;
  }

